--- a/index.html
+++ b/index.html
@@ -7,13 +7,12 @@
     <link rel="stylesheet" href="styles.css">
     <script src="https://kit.fontawesome.com/711f73e191.js" crossorigin="anonymous"></script>
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
-
 </head>
 <body>
     <!--Navbar Section-->
     <nav class="navbar">
         <div class="navbar__container">
-            <a href="#home" id="navbar__logo">Teri Pyaari Mummy</a>
+            <a href="#home" id="navbar__logo">Tohri Pyaari Mummy</a>
             <div class="navbar__toggle" id="mobile-menu">
                 <span class="bar"></span>
                 <span class="bar"></span>
@@ -24,13 +23,13 @@
                     <a href="#home" class="navbar__links" id="home-page">Chonkmay</a>
                 </li>
                 <li class="navbar__item">
-                    <a href="#about" class="navbar__links" id="about-page">ShyGuy</a>
+                    <a href="#about" class="navbar__links" id="about-page">Babhay</a>
                 </li>
                 <li class="navbar__item">
-                    <a href="#services" class="navbar__links" id="services-page">RaghavMomwi</a>
+                    <a href="#services" class="navbar__links" id="services-page">ZifThicc</a>
                 </li>
                 <li class="navbar__btn">
-                    <a href="#sign-up" class="button" id="signup">Sign Up</a>
+                    <a href="#sign-up" class="button" id="signup">SilentKiller</a>
                 </li>
             </ul>
         </div>
@@ -83,6 +82,75 @@
                 </div>
             </div>
         </div>
+    </div>
+
+    <!--Features Section-->
+    <div class="main" id="sign-up">
+        <div class="main__container">
+            <div class="main__content">
+                <h1>Sign up to our newsletter for regular updates!</h1>
+                <h2>Let all of us CUM!!!</h2>
+                <p>CUMCUMCUMCUMCUMCUM</p>
+                <button class="main__btn"><a href="#">:sheeshemoji:</a></button>
+                
+            </div>
+            <div class="main__img--container">
+                <div class="shadow">
+                    <div class="triangle__wrapper">
+                         <div class="main__img--card2"><video src="video\AT-cm_mJdAwdZGwSJBH-DbfbUogQ.mp4" controls></video></div>
+                    </div>  
+                </div>
+        </div>
+    </div>
+     
+    <!--Footer Section-->
+    <div class="footer__container">
+        <div class="footer__links">
+            <div class="footer__links--wrapper">
+                <div class="footer__links--items">
+                    <h2>About Us</h2>
+                    <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">How it works</a>
+                    <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Testimonials</a>
+                    <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Careers</a>
+                    <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Terms of Services</a>
+                </div>
+                <div class="footer__links--items">
+                    <h2>Contact Us</h2>
+                    <a href="mailto:vallancealvares21@gmail.com?subject = Feedback&body = Message">Contact</a>
+                    <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Support</a>
+                    <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Destinations</a>
+                </div>
+            </div>
+            <div class="footer__link--wrapper">
+                <div class="footer__links--items">
+                    <h2>Social Media</h2>
+                    <a href="https://www.instagram.com/myappypollyloggies/">Instagram</a>
+                    <a href="https://www.youtube.com/channel/UCJGIXsWzACoZ3awoNMpW5nw">Youtube</a>
+                    <a href="https://steamcommunity.com/profiles/76561199061648281">Steam</a>
+                    <a href="https://discord.gg/cV63fYye">Discord</a>
+                </div>
+                <div class="footer__links--items">
+                    <h2>Videos</h2>
+                    <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Submit videos</a>
+                    <a href="https://www.youtube.com/channel/UCOi9iHiZ-UHv7uYkGUWV_NA">Ambassadors</a>
+                    <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQhttps://www.youtube.com/watch?v=dQw4w9WgXcQ">Agency</a>
+                </div>
+            </div>
+        </div>
+        <section class="social__media">
+            <div class="social__media--wrap">
+                <div class="footer__logo">
+                    <a href="/" id="footer__logo">Tohri Amma</a>
+                </div>
+                <p class="website__rights">© Chimmy Ltd 2022. All Rights Reserved.</p>
+                <div class="social__icons">
+                    <a href="https://www.instagram.com/myappypollyloggies/" class="social__icons--link" target="_blank"><i class="fab fa-instagram"></i></a>
+                    <a href="https://www.youtube.com/channel/UCJGIXsWzACoZ3awoNMpW5nw" class="social__icons--link"><i class="fab fa-youtube"></i></a>
+                    <a href="https://discord.gg/cV63fYye" class="social__icons--link"><i class="fab fa-discord"></i></a>
+                    <a href="https://steamcommunity.com/profiles/76561199061648281" class="social__icons--link"><i class="fab fa-steam"></i></a>
+                </div>
+            </div>
+        </section>
     </div>
 
     <script src="app.js"> </script>
